// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<nav aria-label="Sidenavigering">
  <ul>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Forrige side"
        aria-disabled="false"
      >
        Forrige
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 1"
      >
        1
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 2"
      >
        2
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 3"
      >
        3
      </button>
    </li>
    <li>
      <button
        data-variant="primary"
        type="button"
        aria-label="Side 4"
        aria-current="page"
      >
        4
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 5"
      >
        5
      </button>
    </li>
    <li>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 10"
      >
        10
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Neste side"
        aria-disabled="false"
      >
        Neste
      </button>
    </li>
  </ul>
</nav>
`;

exports[`With Anchor 1`] = `
<nav aria-label="Sidenavigering">
  <ul>
    <li>
      <a
        href="#forrige-side"
        data-variant="tertiary"
        aria-label="Forrige side"
        aria-disabled="false"
      >
        Forrige
      </a>
    </li>
    <li>
      <a
        href="#side-1"
        data-variant="tertiary"
        aria-label="Side 1"
      >
        1
      </a>
    </li>
    <li>
      <a
        href="#side-2"
        data-variant="primary"
        aria-label="Side 2"
        aria-current="page"
      >
        2
      </a>
    </li>
    <li>
      <a
        href="#side-3"
        data-variant="tertiary"
        aria-label="Side 3"
      >
        3
      </a>
    </li>
    <li>
      <a
        href="#side-4"
        data-variant="tertiary"
        aria-label="Side 4"
      >
        4
      </a>
    </li>
    <li>
      <a
        href="#side-5"
        data-variant="tertiary"
        aria-label="Side 5"
      >
        5
      </a>
    </li>
    <li>
    </li>
    <li>
      <a
        href="#side-10"
        data-variant="tertiary"
        aria-label="Side 10"
      >
        10
      </a>
    </li>
    <li>
      <a
        href="#neste-side"
        data-variant="tertiary"
        aria-label="Neste side"
        aria-disabled="false"
      >
        Neste
      </a>
    </li>
  </ul>
</nav>
`;
